--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 certifi==2019.6.16
 chardet==3.0.4
+common==0.1.2
 dbschema==1.4.2
 idna==2.8
+numpy==1.17.2
 pg8000==1.13.2
 psycopg2==2.8.3
 psycopg2-binary==2.8.3
