--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
 common==0.1.2
 dbschema==1.4.2
+gevent==1.4.0
+greenlet==0.4.15
 idna==2.8
 numpy==1.17.2
 pg8000==1.13.2
 psycopg2==2.8.3
 psycopg2-binary==2.8.3
+pycparser==2.19
 PyHamcrest==1.9.0
 PyMySQL==0.9.3
 PyYAML==5.1.2
@@ -18,3 +22,4 @@ testing.common.database==2.0.3
 testing.postgresql==1.3.0
 tiingo==0.11.0
 urllib3==1.25.3
+websocket-client==0.56.0
